# cuba

./: .editorconfig  .env.example  .gitignore  ARAP_PHASE1_COMMIT.txt  ARAP_PHASE2_COMMIT.txt  ARAP_PHASE3_COMMIT.txt  ARAP_PHASE4_COMMIT.txt  ARAP_PHASE5_COMMIT.txt  ARAP_PHASE6_COMMIT.txt  ARAP_PHASE7_COMMIT.txt  COMMIT_MSG.txt  COMMIT_MSG2.txt  Cargo.toml  Makefile  README.md  SERVER_BUILD_PLAN.md  UMSKZ_DATABASE_VIEWS_GUIDE.md  UMSKZ_DOCUMENTATION_INDEX.md  UMSKZ_IMPLEMENTATION_SUMMARY.md  UMSKZ_MIGRATION_GUIDE.md  UMSKZ_PROJECT_SUMMARY.md  UMSKZ_QUICK_REFERENCE.md  UMSKZ_README.md  UMSKZ_STAGE2_COMPLETION_REPORT.md  UMSKZ_STAGE3_COMPLETION_REPORT.md  UMSKZ_STAGE4_COMPLETION_REPORT.md  UMSKZ_STAGE5_COMPLETION_REPORT.md  UNIMPLEMENTED_METHODS.md  buf.gen.yaml  buf.work.yaml  docker-compose.swagger.yaml  docker-compose.yaml  docker-compose.yml  istio-ingressgateway.yaml  justfile  rust-toolchain.toml  rustfmt.toml
apps/am/gs-service/: Cargo.toml  Dockerfile  build.rs
apps/am/gs-service/migrations/: 20240201000000_initial_schema.sql
apps/am/gs-service/src/: main.rs
apps/am/gs-service/src/api/: grpc_server.rs  proto.rs
apps/am/gs-service/src/application/: handlers.rs
apps/am/gs-service/src/domain/: mod.rs
apps/am/gs-service/src/infrastructure/: repository.rs
apps/api-gateway/: Cargo.toml  build.rs
apps/api-gateway/src/: main.rs  state.rs
apps/api-gateway/src/clients/: auth.rs
apps/api-gateway/src/dto/: auth.rs
apps/api-gateway/src/handlers/: auth.rs  health.rs
apps/auth-service/: Cargo.toml  build.rs
apps/auth-service/migrations/: 001_init_events_table.sql  20260107_003_verification_tokens.sql  20260107_005_audit_logs.sql
apps/auth-service/src/: main.rs
apps/auth-service/src/application/: dto.rs  mod.rs
apps/auth-service/src/application/commands/: add_permission.rs  assign_role.rs  attach_policy.rs  authorize.rs  bulk_create_users.rs  change_password.rs  create_api_key.rs  create_client.rs  create_policy.rs  create_role.rs  delete_role.rs  enable_2fa.rs  get_audit_logs.rs  list_api_keys.rs  list_clients.rs  list_permissions.rs  list_roles.rs  list_user_sessions.rs  list_users.rs  login.rs  mod.rs  oauth2_token.rs  register.rs  remove_permission_from_role.rs  remove_role_from_user.rs  reset_password.rs  revoke_api_key.rs  revoke_session.rs  send_password_reset_token.rs  social_login.rs  sso_login.rs  update_user_profile.rs  update_user_status.rs  user_info.rs  verify_2fa_code.rs  verify_2fa_setup.rs  verify_email.rs
apps/auth-service/src/domain/: errors.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
apps/auth-service/src/domain/aggregates/: mod.rs  policy.rs  role.rs  user.rs
apps/auth-service/src/domain/repositories/: policy_repository.rs
apps/auth-service/src/grpc/: auth_service_impl.rs  mod.rs
apps/auth-service/src/infrastructure/: mod.rs
apps/auth-service/src/infrastructure/persistence/: api_key_repository.rs  audit_log_repository.rs  client_repository.rs  mod.rs  pg_policy_repository.rs  refresh_token_repository.rs  role_repository.rs  session_repository.rs  user_repository.rs  verification_repository.rs
apps/auth-service/src/infrastructure/services/: jwt_service.rs  mod.rs  social_auth.rs  sso_service.rs
apps/fi/ar-service/: Cargo.toml  Dockerfile  build.rs
apps/fi/ar-service/migrations/: 20240201000000_initial_schema.sql  20260119000000_add_rejection_reason.sql  20260119000001_add_invoice_status_history.sql  20260119000002_add_acdoca_min_fields.sql
apps/fi/ar-service/src/: lib.rs  main.rs
apps/fi/ar-service/src/api/: grpc_server.rs  proto.rs
apps/fi/ar-service/src/application/: commands.rs  handlers.rs
apps/fi/ar-service/src/domain/: mod.rs
apps/fi/ar-service/src/infrastructure/: repository.rs
apps/fi/uj-service/: Cargo.toml  Dockerfile  README.md  build.rs
apps/fi/uj-service/migrations/: 20260119000000_create_universal_journal.sql
apps/fi/uj-service/migrations/clickhouse/: 001_create_uj_table.sql
apps/fi/uj-service/src/: lib.rs  main.rs
apps/fi/uj-service/src/api/: grpc_server.rs  mod.rs
apps/fi/uj-service/src/domain/: mod.rs  repositories.rs  streaming.rs
apps/fi/uj-service/src/infrastructure/: mod.rs
apps/finance/ar-ap-service/: Cargo.toml  build.rs
apps/finance/ar-ap-service/migrations/: 0001_ar_ap_core.sql  0002_extended_tables.sql  0003_bank_payments.sql  0004_views_functions.sql
apps/finance/ar-ap-service/src/: main.rs  proto.rs
apps/finance/ar-ap-service/src/application/: commands.rs  mod.rs  services.rs
apps/finance/ar-ap-service/src/domain/: entities.rs  extended_entities.rs  extended_repository.rs  (+3 more)
apps/finance/ar-ap-service/tests/: integration_tests.rs
apps/finance/gl-service/: Cargo.toml  build.rs
apps/finance/gl-service/migrations/: 0001_gl_journal_entries.sql  0002_gl_clearing_tax.sql  0003_gl_templates_recurring.sql  0004_document_sequences.sql
apps/finance/gl-service/src/: main.rs  proto.rs
apps/iam/iam-service/: Cargo.toml  Dockerfile  build.rs
apps/iam/iam-service/migrations/: 20240101000000_create_users.sql  20260112184400_create_rbac.sql
apps/iam/iam-service/src/: lib.rs  main.rs
apps/iam/rbac-service/: Cargo.toml  Dockerfile  build.rs
apps/iam/rbac-service/migrations/: 20260113000001_create_rbac.sql
apps/iam/rbac-service/src/: main.rs
apps/sales-service/: Cargo.toml  build.rs
apps/sales-service/src/: main.rs
apps/sc/df-service/: Cargo.toml  Dockerfile  build.rs
apps/sc/df-service/migrations/: 20240201000000_initial_schema.sql
apps/sc/df-service/src/: main.rs
libs/cuba-core/: Cargo.toml
libs/cuba-core/src/: context.rs  domain.rs  lib.rs  pagination.rs  repository.rs
libs/cuba-core/src/types/: common.rs  context.rs  mod.rs  pagination.rs
libs/cuba-cqrs/: Cargo.toml
libs/cuba-cqrs/src/: lib.rs
libs/cuba-finance/: Cargo.toml  build.rs
libs/cuba-finance/src/: gl_client.rs  lib.rs
libs/cuba-messaging/: Cargo.toml
libs/cuba-messaging/src/: lib.rs
libs/cuba-service/: Cargo.toml
libs/cuba-service/src/: lib.rs
libs/cuba-workflow/: Cargo.toml
libs/cuba-workflow/src/: lib.rs  repository.rs  status_history.rs
(+903 files in other folders)
