[workspace]
resolver = "2"
members = [
    "libs/*",
    "apps/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CUBA Enterprise Team"]
license = "Apache-2.0"

[workspace.dependencies]
# Internal Crates
cuba-core = { path = "libs/cuba-core" }
cuba-config = { path = "libs/cuba-config" }
cuba-database = { path = "libs/cuba-database" }
cuba-errors = { path = "libs/cuba-errors" }
cuba-messaging = { path = "libs/cuba-messaging" }
cuba-telemetry = { path = "libs/cuba-telemetry" }

# Async
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Messaging
rdkafka = { version = "0.37", features = ["cmake-build"] }

# gRPC
tonic = "0.14"
prost = "0.13"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = { version = "0.15", features = ["yaml"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
jsonwebtoken = "9.3"

# Build Dependencies
tonic-prost-build = "0.14"
