[workspace]
resolver = "2"
members = [
    "libs/*",
    "apps/*/*", # Support product-line grouping e.g. apps/fi/gl-service
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CUBA Enterprise Team"]
license = "Apache-2.0"

[workspace.dependencies]
# Internal Crates
cuba-core = { path = "libs/cuba-core" }
cuba-config = { path = "libs/cuba-config" }
cuba-database = { path = "libs/cuba-database" }
cuba-errors = { path = "libs/cuba-errors" }
cuba-messaging = { path = "libs/cuba-messaging" }
cuba-telemetry = { path = "libs/cuba-telemetry" }
cuba-cqrs = { path = "libs/cuba-cqrs" }

# Async
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.39", features = ["serde", "db-postgres"] }
rust_decimal_macros = { version = "1.39" }

# Messaging
rdkafka = { version = "0.37", features = ["cmake-build"] }

# gRPC
# gRPC
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"
prost = "0.14"
prost-types = "0.14"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = { version = "0.15", features = ["yaml"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Build Dependencies
tonic-build = "0.14"
tonic-prost-build = "0.14"
