[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit", "catch-panic"] }

# Async Runtime
tokio = { workspace = true, features = ["full"] }

# gRPC Client
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
dotenvy = "0.15"

# Shared Internal Libs
cuba-config = { path = "../../libs/cuba-config" }
cuba-errors = { path = "../../libs/cuba-errors" }
cuba-core = { path = "../../libs/cuba-core" }

[build-dependencies]
tonic-prost-build.workspace = true
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
