[package]
name = "sales-service"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true

cuba-core = { path = "../../libs/cuba-core" }
cuba-config = { path = "../../libs/cuba-config" }
cuba-errors = { path = "../../libs/cuba-errors" }
cuba-database = { path = "../../libs/cuba-database" }
cuba-messaging = { path = "../../libs/cuba-messaging" }
cuba-telemetry = { path = "../../libs/cuba-telemetry" }

[build-dependencies]
tonic-prost-build.workspace = true
