[package]
name = "cuba-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal = { workspace = true, features = ["serde-float"] }
erased-serde = "0.4"
