[package]
name = "cuba-cqrs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
