[package]
name = "cuba-finance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
chrono = { workspace = true, features = ["serde"] }
rust_decimal.workspace = true
anyhow.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
