[package]
name = "cuba-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
cuba-core.workspace = true
cuba-cqrs.workspace = true
