[package]
name = "cuba-service"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-database = { workspace = true }
