[package]
name = "cuba-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
cuba-telemetry.workspace = true
cuba-database.workspace = true
