[package]
name = "cuba-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "General-purpose workflow and state history tracking library"

[dependencies]
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
