[package]
name = "gs-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Internal
cuba-core = { workspace = true }
cuba-database = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-cqrs = { workspace = true }

# External
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tonic-reflection = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
