[package]
name = "ar-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Shared Infrastructure
cuba-core.workspace = true
cuba-errors.workspace = true
anyhow.workspace = true
cuba-cqrs.workspace = true
cuba-database.workspace = true
cuba-messaging.workspace = true
cuba-telemetry.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# gRPC
tonic.workspace = true
tonic-prost.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
