[package]
name = "ar-ap-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Async Runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# gRPC
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic-reflection.workspace = true
tonic-health.workspace = true

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

# Internal Crates
cuba-core = { path = "../../../libs/cuba-core" }
cuba-config = { path = "../../../libs/cuba-config" }
cuba-errors = { path = "../../../libs/cuba-errors" }
cuba-database = { path = "../../../libs/cuba-database" }
cuba-telemetry = { path = "../../../libs/cuba-telemetry" }

[build-dependencies]
tonic-prost-build.workspace = true
