[package]
name = "gl-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Async Runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# gRPC
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic-reflection = "0.14"
tonic-health = "0.14"

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Internal Crates
cuba-core = { path = "../../../libs/cuba-core" }
cuba-config = { path = "../../../libs/cuba-config" }
cuba-errors = { path = "../../../libs/cuba-errors" }
cuba-database = { path = "../../../libs/cuba-database" }
cuba-messaging = { path = "../../../libs/cuba-messaging" }
cuba-telemetry = { path = "../../../libs/cuba-telemetry" }
rust_decimal = { version = "1.39.0", features = ["serde", "db-postgres"] }

[build-dependencies]
tonic-prost-build.workspace = true
