[package]
name = "iam-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 共享基础设施
cuba-core.workspace = true
cuba-errors.workspace = true
# cuba-cqrs.workspace = true      # 待实现
# cuba-database.workspace = true  # 待实现
# cuba-messaging.workspace = true # 待实现
# cuba-telemetry.workspace = true # 待实现

# Async
tokio.workspace = true
async-trait.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
bcrypt.workspace = true
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

