[package]
name = "iam-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 共享基础设施
cuba-core.workspace = true
cuba-errors.workspace = true
anyhow.workspace = true
cuba-cqrs.workspace = true
cuba-database.workspace = true
cuba-messaging.workspace = true
cuba-telemetry.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# gRPC
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
bcrypt.workspace = true
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

