[package]
name = "rbac-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
cuba-core.workspace = true
cuba-database.workspace = true
cuba-telemetry.workspace = true
cuba-cqrs.workspace = true
cuba-service = { path = "../../../libs/cuba-service" }

# External
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tonic-reflection.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
