[package]
name = "df-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-core.workspace = true
cuba-errors.workspace = true
anyhow.workspace = true
cuba-cqrs.workspace = true
cuba-database.workspace = true
cuba-messaging.workspace = true
cuba-telemetry.workspace = true
cuba-service = { path = "../../../libs/cuba-service" }
tokio.workspace = true
async-trait.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy = "0.15"

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
